--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
-version: '2'
+version: '2.2'
 services:
   miner:
     build: .
-    image: docker-xmr-stack-cpu
+    image: valentinvieriu/docker-xmr-stack-cpu:v1.3.0-1.5.0
+    # image: registry.heroku.com/monero42-1/web
     container_name: xmr-miner
+    # cpuset: '0'
+    privileged: true
     environment:
-      WALLET_ADDRESS: '4GdoN7NCTi8a5gZug7PrwZNKjvHFmKeV11L6pNJPgj5QNEHsN6eeX3DaAQFwZ1ufD4LYCZKArktt113W7QjWvQ7CW8bj9Y7ncRBTiepL1v.onyx'
-      POOL_ADDRESS: 'xmr-usa.dwarfpool.com:8100'
-      POOL_PASSWORD: 'jan@trick77.com'
-      AUTO_THREAD_CONFIG: 'true'
+      WALLET_ADDRESS: ${WALLET_ADDRESS}.hmonero1+10000
+      POOL_ADDRESS: ${POOL_ADDRESS}
+      POOL_PASSWORD: ${POOL_PASSWORD}
+      # CORES: 4
+      # AUTO_THREAD_CONFIG: ${AUTO_THREAD_CONFIG}
+      # THREAD_CONFIG: ${THREAD_CONFIG}
+    # entrypoint: "/bin/sh -c"
     ulimits:
       memlock:
         soft: -1
         hard: -1
-    restart: unless-stopped
+    restart: always
